ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
03/17/12 Oleh Derevenko
        * Threaded execution support interface added. Optional built-in threading
          implementation added.
          Internal threading implementation is excluded by default and to be used, 
          it must be enabled with configure/premake.
          At present, if threading interface is assigned to a world, island 
          selection and stepping is performed in multiple threads (one thread per 
          island).

03/12/12 Oleh Derevenko
        * PURE_INLINE macro renamed to ODE_PURE_INLINE and definition of 
          dNextAfter()/dCopySign() corrected to avoid creating conflicts with 
          other libraries.

02/03/12 Oleh Derevenko
        * Assertion checking macros moved from common.h to error.h

12/18/11 Oleh Derevenko
        * dIVERIFY macro added (same as dIASSERT in debug mode but evaluates its
          expression in release mode) to be used to assert variable value 
          which is not used further in text while avoiding compiler warning.
        * dICHECK macro added (same as dIASSERT but evaluates its expression and 
          raises assertion fault regardless of compilation mode) to be used to
          generate a fault in cases when error is very unlikely but must be 
          handled and handling is very troublesome (e.g. failure to lock a mutex
          due to lack of resources).

12/07/11 Oleh Derevenko
        * Partially fixed size_t to integer conversion warnings
        * Fixed type signedness and added casts to size_t wherever necessary 
          in Step/QuickStep

11/04/11 Daniel K. O.
        * Applied patch #3429454 - fix compilation on some platforms.
